--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-1.Oluwole Adebanjo (BIGRIZZY)
-2 Oluwatomi Majekodunmi(HORLUWATOMEE)
+1.Nwanyieze Ikonnie (nwanyiezeikonnie)
+2 sylvanus Anani (Sylganyo)
